<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/etNewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_new_note"
        android:fontFamily="@font/cambay"
        android:gravity="top"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#9A9A9A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/date"
        android:textColor="#ACACAC"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewNote" />

    <EditText
        android:id="@+id/etNewNoteDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_new_note"
        android:gravity="top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20sp"
        android:textColorHint="#9A9A9A"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

</androidx.constraintlayout.widget.ConstraintLayout>